// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsAllowedIPDialog > renders correctly when creating new IP 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="New: IP address"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <evocon-v-input-stub
            class="mb-2"
            filled="true"
            grow="false"
            hint="Public IP address"
            modelmodifiers="[object Object]"
            modelvalue=""
            placeholder="Public IP address"
            required=""
            rules="(v) => (!!v && !!v.trim()) || __vite_ssr_import_3__.default.global.t('Public IP address'),(v) => ipv4Regex.test(v) || __vite_ssr_import_3__.default.global.t('Public IP not in correct format (IPv4)')"
            truncateinput="false"
            type="text"
            usechip="false"
            validate-on-blur=""
          />
          <evocon-v-input-stub
            class="mb-2"
            filled="true"
            grow="false"
            hint="Description"
            modelmodifiers="[object Object]"
            modelvalue=""
            placeholder="Description"
            required=""
            rules="(v) => !!v && !!v.trim() || _ctx.$t('Description')"
            truncateinput="false"
            type="text"
            usechip="false"
            validate-on-blur=""
          />
          <selection-input-stub
            checkbox="true"
            coloractiveprepend="false"
            disabled="false"
            disabledvalues=""
            emittoggleall="false"
            emptyequalsallselected="false"
            error="false"
            filled="true"
            groupidkey="id"
            groups=""
            groupsorderby="name"
            hiddenitemscount="0"
            hidesearch="true"
            hint="Roles"
            inverted="false"
            isgroupedselect="false"
            issingleselect="false"
            itemflag=""
            itemgroupidkey="groupId"
            items="[object Object],[object Object],[object Object],[object Object]"
            itemsecondarytext=""
            itemtertiarytext=""
            itemtext="name"
            itemvalue="id"
            loading="false"
            menuinputtype="primary"
            modelvalue=""
            numericorderby="false"
            placeholder="Roles"
            prependtext=""
            removenonexistentselections="false"
            required="true"
            showemptyarrayasallselected="false"
            someselected="false"
            totalcount="0"
            usechips="false"
          />
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsAllowedIPDialog > renders correctly when editing existing IP 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="192.168.1.1"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <evocon-v-input-stub
            class="mb-2"
            filled="true"
            grow="false"
            hint="Public IP address"
            modelmodifiers="[object Object]"
            modelvalue="192.168.1.1"
            placeholder="Public IP address"
            required=""
            rules="(v) => (!!v && !!v.trim()) || __vite_ssr_import_3__.default.global.t('Public IP address'),(v) => ipv4Regex.test(v) || __vite_ssr_import_3__.default.global.t('Public IP not in correct format (IPv4)')"
            truncateinput="false"
            type="text"
            usechip="false"
            validate-on-blur=""
          />
          <evocon-v-input-stub
            class="mb-2"
            filled="true"
            grow="false"
            hint="Description"
            modelmodifiers="[object Object]"
            modelvalue="test1"
            placeholder="Description"
            required=""
            rules="(v) => !!v && !!v.trim() || _ctx.$t('Description')"
            truncateinput="false"
            type="text"
            usechip="false"
            validate-on-blur=""
          />
          <selection-input-stub
            checkbox="true"
            coloractiveprepend="false"
            disabled="false"
            disabledvalues=""
            emittoggleall="false"
            emptyequalsallselected="false"
            error="false"
            filled="true"
            groupidkey="id"
            groups=""
            groupsorderby="name"
            hiddenitemscount="0"
            hidesearch="true"
            hint="Roles"
            inverted="false"
            isgroupedselect="false"
            issingleselect="false"
            itemflag=""
            itemgroupidkey="groupId"
            items="[object Object],[object Object],[object Object],[object Object]"
            itemsecondarytext=""
            itemtertiarytext=""
            itemtext="name"
            itemvalue="id"
            loading="false"
            menuinputtype="primary"
            modelvalue="COMPANY_ADMIN"
            numericorderby="false"
            placeholder="Roles"
            prependtext=""
            removenonexistentselections="false"
            required="true"
            showemptyarrayasallselected="false"
            someselected="false"
            totalcount="0"
            usechips="false"
          />
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;
